Add PyTorch support to nnTraining2 toolchain
- Framework abstraction: Added framework detection and abstraction layer in nnModel.py
  - Automatic framework detection from config (tensorflow/pytorch)
  - Framework-agnostic save/load methods

- PyTorch model implementation: Created deepEpiCnnModel_torch.py
  - Full PyTorch implementation of 14-layer DeepEpi CNN architecture (Spahr et al. 2025)
  - Equivalent architecture to existing TensorFlow model
  - GPU acceleration support for systems where TensorFlow GPU is unavailable

- Refactored nnTrainer.py to eliminate code duplication
  - Extracted common functions: load_config_params, load_model_class, resolve_data_file_paths, load_and_preprocess_data, plot_training_history
  - Split into framework-specific training functions (trainModel_tensorflow, trainModel_pytorch)
  - Reduced code size by 52 lines, eliminated ~200 lines of duplication

- Added PyTorch support to nnTester.py
  - Framework-agnostic testing pipeline with helper functions
  - get_model_extension, load_model_for_testing, evaluate_model, predict_model
  - Updated all test functions for dual-framework compatibility

- Configuration and documentation
  - Added framework field to nnConfig_deep.json
  - Created nnConfig_deep_pytorch.json example configuration
  - Created requirements_pytorch.txt with PyTorch dependencies
  - Updated README.md with comprehensive framework support documentation
  - Added PYTORCH_MIGRATION.md migration guide with troubleshooting
  - Created IMPLEMENTATION_SUMMARY.md technical documentation

- Maintains full backward compatibility with existing TensorFlow workflows

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -70,23 +70,20 @@
     },
 
     "modelConfig": {
-        "framework": "tensorflow",
-        "modelType": "tensorflow",
-        "modelFname": "deepEpiCnnModel",
-        "modelClass": "user_tools.nnTraining2.deepEpiCnnModel.DeepEpiCnnModel",
+        "framework": "pytorch",
+        "modelFname": "deepEpiCnnModel_pytorch",
+        "modelClass": "user_tools.nnTraining2.deepEpiCnnModel_torch.DeepEpiCnnModelPyTorch",
         "sampleFreq": 25,
         "bufferSeconds": 30,
-        "epochs": 1,
+        "epochs": 100,
         "batchSize": 64,
         "nLayers": 14,
         "lrFactor": 0.1,
         "lrPatience": 5,
-        "lrStart": 1e-5,
+        "lrStart": 1e-3,
         "lrMin": 1e-6,
         "earlyStoppingPatience": 10,
         "trainingVerbosity": 1,
         "dims": 1
-        ,"useLrSchedule": false,
-        "useAdamW": false
     }
 }
