Changed data balancing approach to match Spahr et. al. 2025 methodology, and implemented learning rate variation and optimisation to match the paper methodology

--- a/user_tools/nnTraining2/nnConfig_deep_run.json
+++ b/user_tools/nnTraining2/nnConfig_deep_run.json
@@ -99,6 +99,8 @@
         "lrMin": 1e-6,
         "earlyStoppingPatience": 10,
         "trainingVerbosity": 1,
-        "dims": 1
+        "dims": 1,
+        "useLrSchedule": false,
+        "useAdamW": false
     }
 }
