--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -48,7 +48,7 @@
         "window": 750,
         "step": 125,
         "oversample": "none",
-        "undersample": "random",
+        "undersample": "none",
         "worker_count": null,
         "batch_size": 1000,
         "stream_chunksize": 20000,
@@ -76,14 +76,33 @@
         "sampleFreq": 25,
         "bufferSeconds": 30,
         "epochs": 100,
-        "batchSize": 64,
+        "batchSize": 512,
         "nLayers": 14,
         "lrFactor": 0.1,
         "lrPatience": 5,
-        "lrStart": 1e-3,
+        "lrStart": 1e-5,
         "lrMin": 1e-6,
         "earlyStoppingPatience": 10,
         "trainingVerbosity": 1,
-        "dims": 1
+        "dims": 1,
+        "_comment_lr_schedule": "Set useLrSchedule to true to enable Spahr et al. 2025 three-phase learning rate schedule",
+        "useLrSchedule": true,
+        "useAdamW": true,
+        "adamwBeta1": 0.9,
+        "adamwBeta2": 0.999,
+        "weightDecay": 0.0,
+        "lrPeak": 1e-3,
+        "lrMainEnd": 3e-5,
+        "warmupSteps": 2500,
+        "mainSteps": 45000,
+        "cooldownSteps": 2500,
+        "totalTrainingSteps": 50000,
+        "_comment_eval": "Evaluation and checkpointing settings",
+        "evalEverySteps": 5000,
+        "saveBestOnBothImprovement": true,
+        "saveBestOnFarReduction": 0.10,
+        "saveBestOnSensitivityTolerance": 0.05,
+        "_comment_batches": "Set useBalancedBatches to true for Spahr et al. 2025 balanced batch sampling",
+        "useBalancedBatches": true
     }
 }
