--- a/user_tools/nnTraining2/nnConfig_deep.json
+++ b/user_tools/nnTraining2/nnConfig_deep.json
@@ -45,6 +45,7 @@
     },
 
     "dataProcessing": {
+        "addFeatureHistoryLength": 0,
         "window": 750,
         "step": 125,
         "oversample": "none",
