Added datapoint validation to handle gaps and overlaps in data

--- a/user_tools/nnTraining2/nnConfig_deep_run.json
+++ b/user_tools/nnTraining2/nnConfig_deep_run.json
@@ -80,6 +80,7 @@
         "validationProp": 0.0,
         "features": ["acc_magnitude"],
         "simpleMagnitudeOnly": true,
+        "validateDatapoints": true,
         "highPassFreq": null,
         "highPassOrder": 2
     },
