--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -66,6 +66,7 @@
         "validationProp": 0.0,
         "features": ["acc_magnitude"],
         "simpleMagnitudeOnly": true,
+        "validateDatapoints": true,
         "highPassFreq": null,
         "highPassOrder": 2
     },
