Updated augmentData to produce uniquely identified events and augment on a per-event basis

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -68,6 +68,7 @@
         "noiseAugmentationFactor": 20,
         "noiseAugmentationValue": 30.0,
         "phaseAugmentation": false,
+        "phaseAugmentationStep": 1,
         "userAugmentation": false,
         "splitTestTrainByEvent": true,
         "accSdThreshold": 0.0,
