--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -58,7 +58,7 @@
         "noiseAugmentation": true,
         "noiseAugmentationFactor": 5,
         "noiseAugmentationValue": 30.0,
-        "phaseAugmentation": true,
+        "phaseAugmentation": false,
         "phaseAugmentationStep": 25,
         "userAugmentation": false,
         "splitTestTrainByEvent": true,
