Added minimum sensitivity for model to be saved as a config file parameter and now saves console output to a file for later analysis.

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -29,7 +29,7 @@
     },
 
     "eventFilters": {
-        "includeUserIds": [],
+        "includeUserIds": [733],
         "excludeUserIds": [],
         "includeTypes": [],
         "excludeTypes": [],
@@ -105,6 +105,7 @@
         "saveBestOnBothImprovement": true,
         "saveBestOnFarReduction": 0.10,
         "saveBestOnSensitivityTolerance": 0.2,
+        "saveBestMinSensitivity": 0.35,
         "_comment_batches": "Set useBalancedBatches to true for Spahr et al. 2025 balanced batch sampling",
         "useBalancedBatches": true
     }
