Removed the slow .ptl file testing for all except the final test run.   Corrected issue where the independent testing was overwritting the fold validation results filesxy x

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -29,12 +29,12 @@
     },
 
     "eventFilters": {
-        "includeUserIds": [733],
+        "includeUserIds": [38, 39],
         "excludeUserIds": [],
         "includeTypes": [],
         "excludeTypes": [],
         "includeSubTypes": [],
-        "excludeSubTypes": ["Unknown", "null", "Null", "Check", "check"],
+        "excludeSubTypes": [ "Check", "check"],
         "includeDataSources": [],
         "excludeDataSources": ["Phone", "AndroidWear"],
         "includeText": [],
@@ -58,7 +58,7 @@
         "noiseAugmentation": true,
         "noiseAugmentationFactor": 10,
         "noiseAugmentationValue": 30.0,
-        "phaseAugmentation": false,
+        "phaseAugmentation": true,
         "phaseAugmentationStep": 5,
         "userAugmentation": false,
         "splitTestTrainByEvent": true,
@@ -83,8 +83,8 @@
         "nLayers": 14,
         "lrFactor": 0.1,
         "lrPatience": 5,
-        "lrStart": 1e-5,
-        "lrMin": 1e-6,
+        "lrStart": 1e-6,
+        "lrMin": 1e-7,
         "earlyStoppingPatience": 10,
         "trainingVerbosity": 1,
         "dims": 1,
@@ -94,7 +94,7 @@
         "adamwBeta1": 0.9,
         "adamwBeta2": 0.999,
         "weightDecay": 0.0,
-        "lrPeak": 1e-3,
+        "lrPeak": 1e-4,
         "lrMainEnd": 3e-5,
         "warmupSteps": 2500,
         "mainSteps": 45000,
