Moved data flattening to .csv earlier in the processing toolchain (immediately after selecting all the required data).   Update the nnTester output to include the results for all events, not just the false positives and false negatives.

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -21,9 +21,7 @@
     "dataFileNames_desc": "Names of data files used in data preparation for training and testing",
     "dataFileNames": {
         "allDataFileJson": "allData.json",
-        "testDataFileJson": "testData.json",
-        "trainDataFileJson": "trainData.json",
-        "valDataFileJson": "valData.json",
+        "allDataFileCsv": "allData.csv",
         "testDataFileCsv": "testData.csv",
         "testBalancedFileCsv": "testDataBalanced.csv",
         "trainDataFileCsv": "trainData.csv",
