--- a/user_tools/nnTraining2/nnConfig_deep.json
+++ b/user_tools/nnTraining2/nnConfig_deep.json
@@ -14,9 +14,7 @@
 
     "dataFileNames": {
         "allDataFileJson": "allData.json",
-        "testDataFileJson": "testData.json",
-        "trainDataFileJson": "trainData.json",
-        "valDataFileJson": "valData.json",
+        "allDataFileCsv": "allData.csv",
         "testDataFileCsv": "testData.csv",
         "testBalancedFileCsv": "testDataBalanced.csv",
         "trainDataFileCsv": "trainData.csv",
