Fixed issue with outer fold testing after changing flattening order.   Increased dropout to try to reduce over-fitting

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -32,7 +32,7 @@
         "includeTypes": [],
         "excludeTypes": [],
         "includeSubTypes": [],
-        "excludeSubTypes": [ "Check", "check"],
+        "excludeSubTypes": [ "Check", "check", "unknown", "Unknown", "null", "Null"],
         "includeDataSources": [],
         "excludeDataSources": ["Phone", "AndroidWear"],
         "includeText": [],
@@ -56,7 +56,7 @@
         "noiseAugmentation": true,
         "noiseAugmentationFactor": 10,
         "noiseAugmentationValue": 30.0,
-        "phaseAugmentation": true,
+        "phaseAugmentation": false,
         "phaseAugmentationStep": 5,
         "userAugmentation": false,
         "splitTestTrainByEvent": true,
@@ -79,11 +79,13 @@
         "epochs": 100,
         "batchSize": 512,
         "nLayers": 14,
+        "convDropout": 0.1,
+        "denseDropout": 0.05,
         "lrFactor": 0.1,
         "lrPatience": 5,
         "lrStart": 1e-6,
         "lrMin": 1e-7,
-        "earlyStoppingPatience": 10,
+        "earlyStoppingPatience": 6,
         "trainingVerbosity": 1,
         "dims": 1,
         "_comment_lr_schedule": "Set useLrSchedule to true to enable Spahr et al. 2025 three-phase learning rate schedule",
@@ -91,7 +93,7 @@
         "useAdamW": true,
         "adamwBeta1": 0.9,
         "adamwBeta2": 0.999,
-        "weightDecay": 0.0,
+        "weightDecay": 0.0001,
         "lrPeak": 0.0001,
         "lrMainEnd": 0.00003,
         "warmupSteps": 2500,
@@ -101,7 +103,7 @@
         "_comment_eval": "Evaluation and checkpointing settings",
         "evalEverySteps": 5000,
         "saveBestOnBothImprovement": true,
-        "saveBestOnFarReduction": 0.10,
+        "saveBestOnFarReduction": 0.05,
         "saveBestOnSensitivityTolerance": 0.2,
         "saveBestMinSensitivity": 0.30,
         "_comment_batches": "Set useBalancedBatches to true for Spahr et al. 2025 balanced batch sampling",
