--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -106,6 +106,11 @@
         "saveBestOnFarReduction": 0.05,
         "saveBestOnSensitivityTolerance": 0.2,
         "saveBestMinSensitivity": 0.25,
+        "_comment_model_selection": "Model selection criteria - prevents saving models with poor FPR/TPR balance",
+        "saveBestMaxFpr": 0.15,
+        "modelSelectionMetric": "f_beta",
+        "fBeta": 2.0,
+        "_comment_metrics": "modelSelectionMetric options: 'dual_improvement' (default), 'f1', 'f_beta', 'youden'. f_beta=2.0 favors sensitivity over precision. saveBestMaxFpr enforces maximum false positive rate (e.g., 0.15 = 15% max FPR)",
         "_comment_batches": "Set useBalancedBatches to true for Spahr et al. 2025 balanced batch sampling",
         "useBalancedBatches": true
     }
