Added another optimisation statistic to minimise FPR with a minimum acceptable tpr

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -79,8 +79,8 @@
         "epochs": 100,
         "batchSize": 512,
         "nLayers": 14,
-        "convDropout": 0.1,
-        "denseDropout": 0.05,
+        "convDropout": 0.05,
+        "denseDropout": 0.025,
         "lrFactor": 0.1,
         "lrPatience": 5,
         "lrStart": 1e-6,
@@ -107,10 +107,10 @@
         "saveBestOnSensitivityTolerance": 0.2,
         "saveBestMinSensitivity": 0.25,
         "_comment_model_selection": "Model selection criteria - prevents saving models with poor FPR/TPR balance",
-        "saveBestMaxFpr": 0.15,
-        "modelSelectionMetric": "f_beta",
+        "saveBestMaxFpr": 0.015,
+        "modelSelectionMetric": "min_fpr",
         "fBeta": 2.0,
-        "_comment_metrics": "modelSelectionMetric options: 'dual_improvement' (default), 'f1', 'f_beta', 'youden'. f_beta=2.0 favors sensitivity over precision. saveBestMaxFpr enforces maximum false positive rate (e.g., 0.15 = 15% max FPR)",
+        "_comment_metrics": "modelSelectionMetric options: 'dual_improvement', 'f1', 'f_beta', 'youden', 'min_fpr'. 'min_fpr' minimizes FPR while maintaining minimum sensitivity (saveBestMinSensitivity). saveBestMaxFpr enforces maximum false positive rate.",
         "_comment_batches": "Set useBalancedBatches to true for Spahr et al. 2025 balanced batch sampling",
         "useBalancedBatches": true
     }
