Removed redundant test loops

--- a/user_tools/nnTraining2/nnConfig_deep_pytorch.json
+++ b/user_tools/nnTraining2/nnConfig_deep_pytorch.json
@@ -27,7 +27,7 @@
     },
 
     "eventFilters": {
-        "includeUserIds": [38, 39],
+        "includeUserIds": [],
         "excludeUserIds": [],
         "includeTypes": [],
         "excludeTypes": [],
@@ -56,7 +56,7 @@
         "noiseAugmentation": true,
         "noiseAugmentationFactor": 10,
         "noiseAugmentationValue": 30.0,
-        "phaseAugmentation": false,
+        "phaseAugmentation": true,
         "phaseAugmentationStep": 5,
         "userAugmentation": false,
         "splitTestTrainByEvent": true,
@@ -97,9 +97,9 @@
         "lrPeak": 0.0001,
         "lrMainEnd": 0.00003,
         "warmupSteps": 2500,
-        "mainSteps": 15000,
+        "mainSteps": 75000,
         "cooldownSteps": 2500,
-        "totalTrainingSteps": 20000,
+        "totalTrainingSteps": 80000,
         "_comment_eval": "Evaluation and checkpointing settings",
         "evalEverySteps": 5000,
         "saveBestOnBothImprovement": true,
